# XLPlainText

./: LICENSE  README.md  pyproject.toml  xlplaintext.py
