[project]
name = "xlplaintext"
version = "0.0.1"
description = "Convert an XLSX workbook to plain text using Excel's `xlTextPrinter` save format."
readme = "README.md"
authors = [
    { name = "Eric J. Whitney", email = "eric.j.whitney@gmail.com" }
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["excel", "xlsx", "text", "conversion", "windows", "com"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Text Processing :: Conversion",
    "Topic :: Utilities"
]
requires-python = ">=3.8"
dependencies = [
    "pywin32>=306"
]

[project.urls]
Homepage = "https://github.com/ericjwhitney/XLPlainText"
Repository = "https://github.com/ericjwhitney/XLPlainText"
Issues = "https://github.com/ericjwhitney/XLPlainText/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
